--- a/View/stylesheet/stylesheet.css
+++ b/View/stylesheet/stylesheet.css
@@ -49,6 +49,7 @@ form {
     height: 30px;
     font-weight: normal;
     text-transform: none;
+    max-width: 500px;
 }
 
 
@@ -259,6 +260,7 @@ article input {
     color: white;
     width: 100%;
     height: 35px;
+    max-width: 500px;
 }
 
 .boton_header {
@@ -833,10 +835,7 @@ header {
     width: 90%;
     background-color: grey;;
 }
-.games-slide label{
-    padding-top: 20px;
-    padding-right: 10%;
-}
+
 .games-slide .label{
     text-align:left;
     padding-top:4%;
@@ -892,7 +891,7 @@ input {
 }
 
 .juntar2 {
-    width: 60%;
+    width: 50%;
     display: inline-block;
     vertical-align: middle;
     text-align: center;
@@ -1058,6 +1057,7 @@ a {
  text-transform:none;
  width: 93%;
  text-align: center;
+ max-width: 478px;
 }
 
 .profile-settings {
